--- a/frontend/styles/provided.css
+++ b/frontend/styles/provided.css
@@ -72,6 +72,14 @@ footer {
     height: 640px;
 }
 
+.login-title {
+    text-align:center
+}
+
+.title {
+    text-align:center   
+}
+
 @media screen and (max-width: 500px) {
     .post {
         border: none;
@@ -92,3 +100,51 @@ footer {
 }
 
 /* Add your styles here */
+input[type=text], input[type=password] {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #2474E1;
+    color: white;
+    font-size: 20px;
+    padding: 14px 20px;
+    margin: auto;
+    display: block;
+    border: none;
+    cursor: pointer;
+    width: 80%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.form {
+    border: 3px solid #f1f1f1;
+}
+
+.labels {
+    margin-left: 8px;
+    margin-top : 8px;
+
+}
+
+.error {
+    color: #D8000C;
+    background-color: #FFD2D2;
+    margin-left: 8px;
+    margin-top : 8px;
+    border: 3px solid red;
+}
+
+#register-link {
+    margin-top : 80px;
+    margin-left: 400px;
+    margin-bottom: 60px;
+}
